<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_raster_base_layer"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/menu_raster_base_layer"/>
    <item
        android:id="@+id/menu_raster_operational_layer"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/menu_raster_operational_layer"/>
    <item
        android:id="@+id/menu_raster_elevation_source"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        android:title="@string/menu_raster_elevation_source"/>
    <item
        android:id="@+id/menu_raster_base_elevation"
        android:orderInCategory="40"
        android:showAsAction="ifRoom"
        android:title="@string/menu_raster_base_elevation"/>
    <item
        android:id="@+id/menu_raster_operational_elevation"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:title="@string/menu_raster_operational_elevation"/>
    

</menu>